# oop_labs4

./: CMakeLists.txt  README.md  main.cpp
include/: figure.h  hexagon.h  pentagon.h  point.h  rhombus.h
test/: tests.cpp
